Site: Create initial version of site

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,15 +3,47 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
+@book{tribal.leadership,
+  title={Tribal Leadership: Leveraging Natural Groups to Build a Thriving Organization},
+  author={Dave Logan, John King, Halee Fischer-Wright},
+  year={2009},
+  publisher={HarperCollins},
+  preview={tribal-leadership.jpeg},
+  url={https://www.amazon.com/Tribal-Leadership-Leveraging-Thriving-Organization-ebook/dp/B0012GTZFC/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1671420946&sr=8-1},
+  selected={true}
 }
 
+@book{music.composition,
+  title={Music Composition For Dummies},
+  author={Scott Jarrett, Holly Day},
+  year={2020},
+  publisher={For Dummies},
+  preview={music-composition.jpeg},
+  url={https://www.amazon.com/Music-Composition-Dummies-Scott-Jarrett-ebook/dp/B08SJ8BPWH/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1671421786&sr=8-5},
+  selected={true}
+}
+
+@book{no.bull.music.theory.2,
+  title={Music Theory for Guitarists, Volume 2},
+  author={James Shipway},
+  year={2021},
+  publisher={Headstock Books},
+  preview={no-bull-music-theory-2.jpeg},
+  url={https://www.amazon.com/Music-Theory-Guitarists-Fretboard-Improvisation-ebook/dp/B09MDKS88Z/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1671422061&sr=1-1-9e7645f9-2d19-4bff-863e-f6cdbe50f990},
+  selected={true}
+}
+
+@book{outward.bound,
+  title={Leadership the Outward Bound Way: Becoming a Better Leader in the Workplace, in the Wilderness, and in Your Community},
+  author={Rob Chatfield, Lewis Glenn, John Raynolds, Mark Gerzon, Caroline Blair-Smith, Bob Gordon, Jim Garrett, Ashley Lodato},
+  year={2007},
+  publisher={Mountaineers Books},
+  preview={outward-bound.png},
+  url={https://www.amazon.com/Leadership-Outward-Bound-Way-Wilderness/dp/159485033X/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1671422329&sr=1-1},
+  selected={true}
+}
+
+# examples
 @article{einstein1950meaning,
   abbr={AJP},
   bibtex_show={true},
@@ -42,8 +74,7 @@
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
   html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
   pdf={example_pdf.pdf},
-  altmetric={248277},
-  selected={true}
+  altmetric={248277}
 }
 
 @article{einstein1905molekularkinetischen,
